[gd_scene load_steps=8 format=3 uid="uid://bmgdd1or3bt1y"]

[ext_resource type="Texture2D" uid="uid://bxlkvyq350q6w" path="res://Assets/snowyWolf/Wolf-Sheet.png" id="1_03bxa"]
[ext_resource type="Script" path="res://scripts/SnowyWolf/snowy_wolf_minion.gd" id="1_ybpq6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r244a"]
atlas = ExtResource("1_03bxa")
region = Rect2(8, 9, 30, 26)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1jwiq"]
radius = 3.0
height = 22.0

[sub_resource type="Animation" id="Animation_66hlm"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.846154), Vector2(1, 1.15385), Vector2(1, 0.846154)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -11), Vector2(0, -15), Vector2(0, -11)]
}

[sub_resource type="Animation" id="Animation_hiihx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.846154)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nrtdb"]
_data = {
"Idle": SubResource("Animation_66hlm"),
"RESET": SubResource("Animation_hiihx")
}

[node name="SnowyWolfMinion" type="CharacterBody2D"]
script = ExtResource("1_ybpq6")
speed = 100.0
locations_radius = 300.0

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(0, -15)
scale = Vector2(1, 0.846154)
texture = SubResource("AtlasTexture_r244a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1jwiq")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
avoidance_enabled = true
radius = 32.0
debug_enabled = true

[node name="NavTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
autostart = true

[node name="ChooseLocationTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[node name="Anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_nrtdb")
}

[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="ChooseLocationTimer" to="." method="_on_choose_location_timer_timeout"]
